--- a/digit_recognizer.ipynb
+++ b/digit_recognizer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793bd573",
+   "id": "19bec019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6b1ab2fb",
+   "id": "1599a907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f35ae286",
+   "id": "9c297f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5c540e86",
+   "id": "75137581",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "460f862d",
+   "id": "0c0a3979",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "10a36cce",
+   "id": "588f9c2a",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "031915e3",
+   "id": "dbcc09b0",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "47e6aa3b",
+   "id": "4d4723d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "74bde1be",
+   "id": "b1d13be4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7757f150",
+   "id": "cf5601d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d068b447",
+   "id": "ac375d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,21 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "cfbd740f",
+   "execution_count": 42,
+   "id": "60272974",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = keras.Sequential([\n",
     "    keras.layers.Dense(100, input_shape=(784,),activation=\"relu\"),\n",
+    "    keras.layers.Dense(100,activation=\"relu\"),\n",
+    "    keras.layers.Dense(100,activation=\"relu\"),\n",
+    "    keras.layers.Dense(100,activation=\"relu\"),\n",
     "    keras.layers.Dense(10,activation=\"sigmoid\")\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "0c9977ab",
+   "execution_count": 43,
+   "id": "6a2de29f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "5a3d1d12",
+   "execution_count": 44,
+   "id": "bd1451cd",
    "metadata": {},
    "outputs": [
     {
@@ -204,34 +207,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2706 - accuracy: 0.9226\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2552 - accuracy: 0.9230\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.1204 - accuracy: 0.9647\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1151 - accuracy: 0.9659\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0827 - accuracy: 0.9749\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0835 - accuracy: 0.9741\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0618 - accuracy: 0.9810\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0675 - accuracy: 0.9793\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0484 - accuracy: 0.9854\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0582 - accuracy: 0.9822\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0387 - accuracy: 0.9883\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0466 - accuracy: 0.9852\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0316 - accuracy: 0.9902\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0417 - accuracy: 0.9866\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0271 - accuracy: 0.9918\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0351 - accuracy: 0.9890\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0211 - accuracy: 0.9933\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0331 - accuracy: 0.9897\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.0180 - accuracy: 0.9945\n"
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0274 - accuracy: 0.9915\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2b0b58aeb60>"
+       "<keras.callbacks.History at 0x2b0bebfe830>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,24 +246,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "1e54ba6f",
+   "execution_count": 45,
+   "id": "8ec5e5b2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 2ms/step - loss: 0.0819 - accuracy: 0.9766\n"
+      "313/313 [==============================] - 1s 2ms/step - loss: 0.1095 - accuracy: 0.9753\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.08192820101976395, 0.9765999913215637]"
+       "[0.10946829617023468, 0.9753000140190125]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a283df46",
+   "id": "b1ed5ab0",
    "metadata": {},
    "outputs": [],
    "source": []
